z-index fix for go back

--- a/glyptoria.css
+++ b/glyptoria.css
@@ -36,6 +36,7 @@ body{
     color: #191418;
     font-weight: bold;
     font-family:'Press Start 2p';
+    z-index: 1;
 }
 
 .spaceship{
